# case-pismo

./: README.md  pyproject.toml
data/input/: events-1f7df57a-e1c9-4b76-b795-962de9cc292e.json  events-2924398a-d266-4f0e-b9f9-d7d35979ec7f.json  events-5a1d977f-d295-4b8b-aa8f-3a0dbb661dfb.json  events-6dea23dd-f46e-4f35-b948-4abe9cd6d1d7.json  events-6feecebf-d7a1-4cf1-a153-ffb120d88e8a.json  events-845d5e63-78ff-471e-b045-5f1faeb8ed79.json  events-88d5d460-d3ab-4058-9abd-fd07e033a337.json  events-8b908f99-0c4b-40f7-ba0c-70928dd95aeb.json  events-a17ec8ab-8207-47e4-b632-77067f2622ae.json  events-b9cd4135-4cba-44c6-8e00-3a46e97fc915.json  events-c3c321e9-d229-4434-b8d2-a561698b184f.json  events-d9107ca9-619e-4bf2-b281-4b4a34f7fb44.json  events-ea3d7fe8-e94a-4380-b1c1-0e9e7b972168.json  events-f13735e0-1796-4e5a-ac28-b741a43283b4.json
data/tmp/: events-1f7df57a-e1c9-4b76-b795-962de9cc292e.json  events-2924398a-d266-4f0e-b9f9-d7d35979ec7f.json  events-5a1d977f-d295-4b8b-aa8f-3a0dbb661dfb.json  events-6dea23dd-f46e-4f35-b948-4abe9cd6d1d7.json  events-6feecebf-d7a1-4cf1-a153-ffb120d88e8a.json  events-845d5e63-78ff-471e-b045-5f1faeb8ed79.json  events-88d5d460-d3ab-4058-9abd-fd07e033a337.json  events-8b908f99-0c4b-40f7-ba0c-70928dd95aeb.json  events-a17ec8ab-8207-47e4-b632-77067f2622ae.json  events-b9cd4135-4cba-44c6-8e00-3a46e97fc915.json  events-c3c321e9-d229-4434-b8d2-a561698b184f.json  events-d9107ca9-619e-4bf2-b281-4b4a34f7fb44.json  events-ea3d7fe8-e94a-4380-b1c1-0e9e7b972168.json  events-f13735e0-1796-4e5a-ac28-b741a43283b4.json
scripts/: Desafio_pismo.ipynb  utils.py
(+708 files in other folders)
